--- a/data/ui/file-prop.glade
+++ b/data/ui/file-prop.glade
@@ -421,7 +421,7 @@
                                   <object class="GtkLabel" id="label6">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Owner:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Read:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                   <packing>
@@ -433,7 +433,7 @@
                                   <object class="GtkLabel" id="label8">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Group:&lt;/b&gt;</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Write:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                   <packing>
@@ -444,10 +444,11 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkLabel" id="label9">
+                                  <object class="GtkLabel" id="exec_label">
                                     <property name="visible">True</property>
                                     <property name="xalign">0</property>
-                                    <property name="label" translatable="yes">&lt;b&gt;Other:&lt;/b&gt;</property>
+                                    <!-- "Execute" should be replaced by "Enter" for directory -->
+                                    <property name="label" translatable="yes">&lt;b&gt;Execute:&lt;/b&gt;</property>
                                     <property name="use_markup">True</property>
                                   </object>
                                   <packing>
@@ -458,10 +459,24 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBox" id="owner_perm">
+                                  <object class="GtkLabel" id="flags_label">
                                     <property name="visible">True</property>
-                                    <property name="tooltip_text" translatable="yes">Operations that the owner of the file can do</property>
-                                    <property name="model">access_model</property>
+                                    <property name="xalign">0</property>
+                                    <property name="label" translatable="yes">&lt;b&gt;Special bits:&lt;/b&gt;</property>
+                                    <property name="use_markup">True</property>
+                                  </object>
+                                  <packing>
+                                    <property name="top_attach">3</property>
+                                    <property name="bottom_attach">4</property>
+                                    <property name="x_options">GTK_FILL</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkComboBox" id="read_perm">
+                                    <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">Who can read content of the file/directory</property>
+                                    <property name="model">read_access_model</property>
                                     <child>
                                       <object class="GtkCellRendererText" id="cellrenderertext1"/>
                                       <attributes>
@@ -476,9 +491,9 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBox" id="group_perm">
+                                  <object class="GtkComboBox" id="write_perm">
                                     <property name="visible">True</property>
-                                    <property name="tooltip_text" translatable="yes">Operations that users in the same group as the owner of the file can do</property>
+                                    <property name="tooltip_text" translatable="yes">Who can change content of the file/directory</property>
                                     <property name="model">access_model</property>
                                     <child>
                                       <object class="GtkCellRendererText" id="cellrenderertext2"/>
@@ -496,9 +511,9 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkComboBox" id="other_perm">
+                                  <object class="GtkComboBox" id="exec_perm">
                                     <property name="visible">True</property>
-                                    <property name="tooltip_text" translatable="yes">Operations that all other users can do</property>
+                                    <property name="tooltip_text" translatable="yes">Who can execute the file or enter the directory</property>
                                     <property name="model">access_model</property>
                                     <child>
                                       <object class="GtkCellRendererText" id="cellrenderertext3"/>
@@ -516,14 +531,39 @@
                                   </packing>
                                 </child>
                                 <child>
-                                  <object class="GtkCheckButton" id="exec">
-                                    <property name="label" translatable="yes">Make the file executable</property>
+                                  <object class="GtkComboBox" id="flags_set_file">
                                     <property name="visible">True</property>
-                                    <property name="can_focus">True</property>
-                                    <property name="receives_default">False</property>
-                                    <property name="draw_indicator">True</property>
+                                    <property name="tooltip_text" translatable="yes">Special flags for file execution</property>
+                                    <property name="model">flags_set_file_model</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext4"/>
+                                      <attributes>
+                                        <attribute name="text">0</attribute>
+                                      </attributes>
+                                    </child>
                                   </object>
                                   <packing>
+                                    <property name="left_attach">1</property>
+                                    <property name="right_attach">2</property>
+                                    <property name="top_attach">3</property>
+                                    <property name="bottom_attach">4</property>
+                                    <property name="y_options">GTK_FILL</property>
+                                  </packing>
+                                </child>
+                                <child>
+                                  <object class="GtkComboBox" id="flags_set_dir">
+                                    <property name="visible">True</property>
+                                    <property name="tooltip_text" translatable="yes">Special flags for directory access</property>
+                                    <property name="model">flags_set_dir_model</property>
+                                    <child>
+                                      <object class="GtkCellRendererText" id="cellrenderertext5"/>
+                                      <attributes>
+                                        <attribute name="text">0</attribute>
+                                      </attributes>
+                                    </child>
+                                  </object>
+                                  <packing>
+                                    <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
                                     <property name="top_attach">3</property>
                                     <property name="bottom_attach">4</property>
@@ -616,32 +656,106 @@
         </child>
       </object>
     </child>
+    <child>
+      <object class="GtkListStore" id="access_model">
+        <columns>
+          <!-- column-name Write or Exec Access -->
+          <column type="gchararray"/>
+        </columns>
+        <data>
+          <row>
+            <col id="0" translatable="yes">---</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Nobody</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Only owner</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Only group</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Anyone</col>
+          </row>
+        </data>
+      </object>
+    </child>
+    <child>
+      <object class="GtkListStore" id="read_access_model">
+        <columns>
+          <!-- column-name Read Access -->
+          <column type="gchararray"/>
+        </columns>
+        <data>
+          <row>
+            <col id="0" translatable="yes">---</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Only owner</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Only group</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Anyone</col>
+          </row>
+        </data>
+      </object>
+    </child>
+    <child>
+      <object class="GtkListStore" id="flags_set_file_model">
+        <columns>
+          <!-- column-name File Special Access -->
+          <column type="gchararray"/>
+        </columns>
+        <data>
+          <row>
+            <col id="0" translatable="yes">---</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">None</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Set UID</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Set GID</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Set UID &amp; GID</col>
+          </row>
+        </data>
+      </object>
+    </child>
+    <child>
+      <object class="GtkListStore" id="flags_set_dir_model">
+        <columns>
+          <!-- column-name Directory Special Access -->
+          <column type="gchararray"/>
+        </columns>
+        <data>
+          <row>
+            <col id="0" translatable="yes">---</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">None</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Sticky</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Set GID</col>
+          </row>
+          <row>
+            <col id="0" translatable="yes">Sticky &amp; set GID</col>
+          </row>
+        </data>
+      </object>
+    </child>
     <action-widgets>
       <action-widget response="-6">cancel</action-widget>
       <action-widget response="-5">ok</action-widget>
     </action-widgets>
-  </object>
-  <object class="GtkListStore" id="access_model">
-    <columns>
-      <!-- column-name Access -->
-      <column type="gchararray"/>
-    </columns>
-    <data>
-      <row>
-        <col id="0" translatable="yes">Read and Write</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Read only</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">Write only</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">None</col>
-      </row>
-      <row>
-        <col id="0" translatable="yes">---</col>
-      </row>
-    </data>
   </object>
 </interface>
